# C--

Asteriods/: highscore.txt  input.h  main  main.cpp  menus.h  screen.h  ui.h
Bezier shapes/: bezier_shapes.cpp  bezier_shapes.h  main  main.cpp
OpenGL/: CMakeLists.txt  camera.h  main  mesh.cpp  mesh.h  model.cpp  model.h  scratch.txt  shader.cpp  shader.h  window  window.cpp
OpenGL/includes/SDL2/: SDL_assert.h  SDL_atomic.h  SDL_bits.h  SDL_cpuinfo.h  SDL_events.h  SDL_filesystem.h  SDL_gamecontroller.h  SDL_gesture.h  SDL_guid.h  SDL_joystick.h  SDL_keyboard.h  SDL_loadso.h  SDL_log.h  SDL_mouse.h  SDL_mutex.h  SDL_opengles2_gl2.h  SDL_opengles2_gl2platform.h  SDL_opengles2_khrplatform.h  SDL_pixels.h  SDL_platform.h  SDL_revision.h  SDL_shape.h  SDL_test_assert.h  SDL_test_crc32.h  SDL_test_harness.h  SDL_test_log.h  SDL_test_md5.h  SDL_test_memory.h  SDL_types.h  SDL_version.h
OpenGL/main.dSYM/Contents/Resources/DWARF/: main
OpenGL/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
OpenGL/output/: OpenGLProject  main
OpenGL/output/main.dSYM/Contents/Resources/DWARF/: main
OpenGL/output/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
OpenGL/shaders/: 3.3.shader.fs  fragment.fs  vertex.vs
OpenGL/window.dSYM/Contents/Resources/DWARF/: window
OpenGL/window.dSYM/Contents/Resources/Relocations/aarch64/: window.yml
SDL Tut/: boilerplate.cpp  sdl2  sdl2.cpp  sdl2_scrolling  sdl2_scrolling.cpp  sdl2_texture  sdl2_texture.cpp  snake  snake.cpp
SDL Tut/game of life/: main.cpp  screen.h
SDL Tut/rotating cube/: main  main.cpp
includes/SDL2/: SDL.h  SDL_audio.h  SDL_blendmode.h  SDL_clipboard.h  SDL_config.h  SDL_egl.h  SDL_endian.h  SDL_error.h  SDL_haptic.h  SDL_hidapi.h  SDL_hints.h  SDL_image.h  SDL_keycode.h  SDL_locale.h  SDL_main.h  SDL_messagebox.h  SDL_metal.h  SDL_misc.h  SDL_mixer.h  (+32 more)
(+25 files in other folders)
